# flask-starter

./: .env.sample  Dockerfile  alembic.ini  main.py  patched.py  pyproject.toml  readme.md
app/: __init__.py
app/api/v1/: api.py  constants.py
app/api/v1/enpoints/: token.py  user.py
app/api/v1/enpoints/services/: user_service.py
app/core/: app_setup.py  config.py  cors.py  errors.py  jwt.py
app/db/: base.py  external_session.py  flask_session.py  init_db.py
app/models/: base_class.py  base_relations.py  user.py
app/schemas/: __init__.py  base.py  msg.py  token.py
scripts/: build-push.sh  build.sh
