[tool.poetry]
name = "flask-starter"
version = "0.1.0"
description = "Starter template for new flask projects with APIFlask, SQLAlchemy, A"
authors = ["dungvv <dungvv@fetek.io>"]
readme = "README.md"
packages = [{include = "flask_starter"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
flask-apispec = "^0.11.4"
apispec = "^5.2.2"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.40"
marshmallow = "^3.17.1"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
PyJWT = "^2.4.0"
pytz = "^2022.2.1"
alembic = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
autoflake = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
